Fix style.css
Fix scrollbars displaying when overflowing problem

--- a/style.css
+++ b/style.css
@@ -17,6 +17,14 @@ html {
     display: flex;
     width: 100%;
     height: 100vh; /*to ensure full viewport height*/
+
+    /* remove scrollbars when overflowing */
+    scrollbar-width: none; /* Firefox */
+    -ms-overflow-style: none; /* IE and Edge */
+}
+
+.container::-webkit-scrollbar {
+    display: none;
 }
 
 .split {
